# advent-of-code-2024

./: .gitignore  Cargo.toml  README.md  bacon.toml  build.rs  checks  justfile  rust-toolchain.toml  update-benchmarks.sh
aoc_assert/: Cargo.toml
aoc_assert/src/: lib.rs
aoc_macros/: Cargo.toml
aoc_macros/src/: aoc_fs.rs  lib.rs
benches/: criterion.rs  days.rs  divan.rs
day01_0/: Cargo.toml
day01_0/src/: main.rs
day03_0/: Cargo.toml
day03_0/src/: main.rs
media/: benchmark-table.md
runner/: Cargo.toml
runner/src/: lib.rs
src/: aoc2024.rs  aoc2025.rs  day01_0.rs  day01_1.rs  day02_0.rs  day02_1.rs  day03_0.rs  day03_1.rs  day04_0.rs  day04_1.rs  day05_0.rs  day05_1.rs  day06_0.rs  day06_1.rs  day07_0.rs  day07_1.rs  day08_0.rs  day08_1.rs  day09_0.rs  day09_1.rs  day10_0.rs  day10_1.rs  day11_0.rs  day11_1.rs  day12_0.rs  day12_1.rs  day13_0.rs  day13_1.rs  day14_0.rs  day14_1.rs  day15_0.rs  day15_1.rs  day16_0.rs  day16_1.rs  day17_0.rs  day17_1.rs  day18_0.rs  day18_1.rs  day19_0.rs  day19_1.rs  (+13 more)
src/aoc2024/: day01_0.rs  day01_1.rs  day02_0.rs  day02_1.rs  day03_0.rs  day03_1.rs  day04_0.rs  day04_1.rs  day05_0.rs  day05_1.rs  day06_0.rs  day06_1.rs  day07_0.rs  day07_1.rs  day08_0.rs  day08_1.rs  day09_0.rs  day09_1.rs  day10_0.rs  day10_1.rs  day11_0.rs  day11_1.rs  day12_0.rs  day12_1.rs  day13_0.rs  day13_1.rs  day14_0.rs  day14_1.rs  day15_0.rs  day15_1.rs  day16_0.rs  day16_1.rs  day17_0.rs  day17_1.rs  day18_0.rs  day18_1.rs  day19_0.rs  day19_1.rs  day20_0.rs  day20_1.rs  (+9 more)
src/aoc2025/: day01_0.rs  day01_1.rs  day02_0.rs  day02_1.rs  day03_0.rs  day03_1.rs  day04_0.rs  day04_1.rs  day05_0.rs  day05_1.rs
