[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[features]
divian = []
alloc_profile = ["divian"]
criterion = []

[profile.dev]
incremental = true
debug = true

[profile.release]
incremental = true
codegen-units = 1
opt-level = 3
strip = "none"
lto = true
panic = "abort"

# For profiling during dev
[profile.prof]
inherits = "release"
strip = false
debug = true

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "divan"
harness = false

[dependencies]
# Used in the main file to give users a way to interact with the application via the CLI
plotly = { version = "0.11.0", features = ["kaleido"] }
clap = { version = "4.5.23", features = ["derive"] }
glob-match = "0.2.1"

# Helpful utilities
itertools = "0.14.0"
lazy_static = "1.5.0"
rayon = "1.10.0"
regex = "1.11.1"
atoi = "2.0.0"
nalgebra = "0.33.2"
pathfinding = "4.12.0"

[build-dependencies]
regex = "1.11.1"

[dev-dependencies]
divan = "0.1.17"
criterion = { version = "0.5", features = ["html_reports"] }
