[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8.0"
took = "0.1.2"

day01_0 = { path = "../day01_0" }
day01_1 = { path = "../day01_1" }
day02_0 = { path = "../day02_0" }
day02_1 = { path = "../day02_1" }
# day03_0 = { path = "../day03_0" }
# day03_1 = { path = "../day03_1" }
# day04_0 = { path = "../day04_0" }
# day04_1 = { path = "../day04_1" }
# day05_0 = { path = "../day05_0" }
# day05_1 = { path = "../day05_1" }
# day06_0 = { path = "../day06_0" }
# day06_1 = { path = "../day06_1" }
# day07_0 = { path = "../day07_0" }
# day07_1 = { path = "../day07_1" }
# day08_0 = { path = "../day08_0" }
# day08_1 = { path = "../day08_1" }
# day09_0 = { path = "../day09_0" }
# day09_1 = { path = "../day09_1" }
# day10_0 = { path = "../day10_0" }
# day10_1 = { path = "../day10_1" }
# day11_0 = { path = "../day11_0" }
# day11_1 = { path = "../day11_1" }
# day12_0 = { path = "../day12_0" }
# day12_1 = { path = "../day12_1" }
# day13_0 = { path = "../day13_0" }
# day13_1 = { path = "../day13_1" }
# day14_0 = { path = "../day14_0" }
# day14_1 = { path = "../day14_1" }
# day15_0 = { path = "../day15_0" }
# day15_1 = { path = "../day15_1" }
# day16_0 = { path = "../day16_0" }
# day16_1 = { path = "../day16_1" }
# day17_0 = { path = "../day17_0" }
# day17_1 = { path = "../day17_1" }
# day18_0 = { path = "../day18_0" }
# day18_1 = { path = "../day18_1" }
# day19_0 = { path = "../day19_0" }
# day19_1 = { path = "../day19_1" }
# day20_0 = { path = "../day20_0" }
# day20_1 = { path = "../day20_1" }
# day21_0 = { path = "../day21_0" }
# day21_1 = { path = "../day21_1" }
# day22_0 = { path = "../day22_0" }
# day22_1 = { path = "../day22_1" }
# day23_0 = { path = "../day23_0" }
# day23_1 = { path = "../day23_1" }
# day24_0 = { path = "../day24_0" }
# day24_1 = { path = "../day24_1" }
# day25_0 = { path = "../day25_0" }
